2006.04.06: David Nichols
	* improved mysql driver reconnections when in transaction

2006.04.05: David Nichols
	* implemented remove_signal_handler() (experimental)
	* added QDOM_PROCESS to new signal functions
	* doc updates
	* signal manager uses a VRMutex for reentrant locking
	* resetting signal handlers ignores SIGPIPE signals
	* signal handlers called with signal number as argument

2006.04.04: David Nichols
	* fixed a bug in delete_all_thread_data(): left the thread data
	  hash in an inconsistent state
	* updated mysql driver for DBI-level auto-commit management
	* updated mysql to try to automatically reconnect if the server 
	  connection disappears while not in a transaction

2007.04.04: Pavel Vozenilek
	* BuiltinFunctionList does not clone the names (assumes they are all 
	  character literals)

2007.04.03: David Nichols
	* initial, highly experimental signal handling support

2007.04.01: David Nichols
	* moved DBI connection locking to the level above the Datasource
	  class (ex: ManagedDatasource)
	* added auto_commit and abort_transaction_start DBI methods

2007.03.26: David Nichols
	* updated build system and sybase driver to be able to generate an
	  "mssql" driver if freetds is present to connection to Microsoft
	  SQL Server
	* updated DBI driver "find" function to attempt to load the driver
	  if it is not already in the list.
	* moved oracle, mysql, and sybase drivers to the normal module
	  directory - the "auto" directory is now empty

2007.03.23: David Nichols
	* updated oracle and mysql drivers to do a commit after select*()
	  methods as well as exec if autocommit is set
	* updated pgsql driver to do auto-commits properly when option is set
	* fixed a bug in Datasource::copy() to preserve autocommit status in the
	  copy

2007.03.22: David Nichols
	* compile fixes for Solaris and HPUX builds
	* pgsql updates
	* HTTPClient now ignores case for HTTP method names (but always sends
	  upper case)

2007.03.21: David Nichols