@@ -27,7 +27,7 @@
 
 class QoreSignalManager QSM;
 
-VRMutex QoreSignalManager::gate;
+LockedObject QoreSignalManager::mutex;
 m_int_func_t QoreSignalManager::smap;
 bool QoreSignalManager::sig_event[QORE_SIGNAL_MAX];
 bool QoreSignalManager::sig_raised = false;
@@ -38,6 +38,31 @@ extern "C" void sighandler(int sig) //, siginfo_t *info, ucontext_t *uap)
    QoreSignalManager::sig_event[sig] = true;
 }
 
+// must be called in the signal lock
+PgmFunc::PgmFunc(int n_sig, class QoreProgram *n_pgm, class UserFunction *n_f) : sig(n_sig), pgm(n_pgm), f(n_f)
+{
+   pgm->registerSignalHandler(sig);
+}
+
+// must be called in the signal lock
+PgmFunc::~PgmFunc()
+{
+   if (pgm)
+      pgm->deregisterSignalHandler(sig);
+}
+
+void PgmFunc::runHandler(class ExceptionSink *xsink)
+{
+   // create signal number argument
+   class List *l = new List();
+   l->push(new QoreNode((int64)sig));
+   class QoreNode *args = new QoreNode(l);
+   pushProgram(pgm);
+   f->eval(args, NULL, xsink);
+   popProgram();
+   args->deref(xsink);
+}
+
 QoreSignalManager::QoreSignalManager() 
 {
    for (int i = 0; i < QORE_SIGNAL_MAX; ++i)
@@ -46,41 +71,28 @@ QoreSignalManager::QoreSignalManager()
 
 QoreSignalManager::~QoreSignalManager()
 {
+   assert(smap.empty());
 }
 
-void QoreSignalManager::setHandler(int sig, class QoreProgram *pgm, class UserFunction *f, class ExceptionSink *xsink)
+void QoreSignalManager::setHandler(int sig, class QoreProgram *pgm, class UserFunction *f)
 {
    bool already_set = false;
 
-   if (gate.enter(xsink))
-      return;
+   SafeLocker sl(&mutex);
 
    m_int_func_t::iterator i = smap.find(sig);
    if (i != smap.end())
    {
+      //printd(5, "replacing handler for signal %d\n", sig);
       already_set = true;
       class PgmFunc *pf = i->second;
       smap.erase(i);
-
-      // FIXME: change ProgramObject to deregister any signal handlers when the QoreProgram object is deleted
-      pf->pgm->deref(xsink);
       delete pf;
-      if (xsink->isException())
-      {
-	 struct sigaction sa;
-	 sa.sa_handler = (sig == SIGPIPE ? SIG_IGN : SIG_DFL);
-	 sigemptyset(&sa.sa_mask);
-	 sa.sa_flags = SA_RESTART;
-	 sigaction(sig, &sa, NULL);
-
-	 gate.exit();
-	 return;
-      }
    }
    
-   smap.erase(sig);
-   smap[sig] = new PgmFunc(pgm, f);
-   gate.exit();
+   //printd(5, "setting handler for signal %d, pgm=%08p\n", sig, pgm);
+   smap[sig] = new PgmFunc(sig, pgm, f);
+   sl.unlock();
 
    if (!already_set)
    {
@@ -92,46 +104,67 @@ void QoreSignalManager::setHandler(int sig, class QoreProgram *pgm, class UserFu
    }
 }
 
-int QoreSignalManager::removeHandler(int sig, class ExceptionSink *xsink)
+int QoreSignalManager::removeHandlerFromProgram(int sig)
 {
-   if (gate.enter(xsink))
-      return -1;
-
+   SafeLocker sl(&mutex);
+   
    m_int_func_t::iterator i = smap.find(sig);
    if (i == smap.end())
-   {
-      gate.exit();
       return 0;
-   }
+   
+   //printd(5, "removing handler for signal %d\n", sig);
    
    class PgmFunc *pf = i->second;
    smap.erase(i);
-   gate.exit();
+   
+   pf->pgm = NULL;
+   // does not have to be called in the signal lock because the program object will not be resynchronized
+   delete pf;
+   sl.unlock();
    
    struct sigaction sa;
    sa.sa_handler = (sig == SIGPIPE ? SIG_IGN : SIG_DFL);
    sigemptyset(&sa.sa_mask);
    sa.sa_flags = SA_RESTART;
    sigaction(sig, &sa, NULL);
-
-   pf->pgm->deref(xsink);
-   delete pf;
-   return xsink->isException() ? -1 : 0;
+      
+   return 0;
 }
 
-class UserFunction *QoreSignalManager::getHandler(int sig, class ExceptionSink *xsink)
+int QoreSignalManager::removeHandler(int sig)
 {
-   if (gate.enter(xsink))
-      return NULL;
+   AutoLocker al(&mutex);
+
+   m_int_func_t::iterator i = smap.find(sig);
+   if (i == smap.end())
+      return 0;
+
+   //printd(5, "removing handler for signal %d\n", sig);
+
+   class PgmFunc *pf = i->second;
+   smap.erase(i);
+
+   struct sigaction sa;
+   sa.sa_handler = (sig == SIGPIPE ? SIG_IGN : SIG_DFL);
+   sigemptyset(&sa.sa_mask);
+   sa.sa_flags = SA_RESTART;
+   sigaction(sig, &sa, NULL);
+
+   // must be called in the signal lock
+   delete pf;
+
+   return 0;
+}
+
+class UserFunction *QoreSignalManager::getHandler(int sig)
+{
+   AutoLocker al(&mutex);
 
    m_int_func_t::const_iterator i = smap.find(sig);
-   UserFunction *uf;
    if (i == smap.end())
-      uf= NULL;
-   else
-      uf = i->second->f;
-   gate.exit();
-   return uf;
+      return NULL;
+
+   return i->second->f;
 }
 
 void QoreSignalManager::handleSignals()
@@ -140,15 +173,12 @@ void QoreSignalManager::handleSignals()
       return;
 
    ExceptionSink xsink;
-   if (gate.enter(&xsink))
-      return;
+   SafeLocker sl(&mutex);
 
+   //printd(5, "handleSignals() called sig_raise=%d\n", sig_raised);   
    // check flag again inside the lock
    if (!sig_raised)
-   {
-      gate.exit();
       return;
-   }
    sig_raised = false;
    
    for (int i = 1; i < QORE_SIGNAL_MAX; ++i)
@@ -157,17 +187,13 @@ void QoreSignalManager::handleSignals()
       {
 	 sig_event[i] = false;
 	 m_int_func_t::const_iterator j = smap.find(i);
-	 assert(j != smap.end());
-	 UserFunction *uf = j->second->f;
-	 
-	 // create signal number argument
-	 class List *l = new List();
-	 l->push(new QoreNode((int64)i));
-	 class QoreNode *args = new QoreNode(l);
-	 uf->eval(args, NULL, &xsink);
-	 args->deref(&xsink);
+	 // ignore signal if handler was removed
+	 if (j == smap.end())
+	    continue;
+
+	 sl.unlock();
+	 j->second->runHandler(&xsink);
+	 sl.lock();
       }
-   }
-   
-   gate.exit();
+   }   
 }
