@@ -1,5 +1,6 @@
 2006.04.06: David Nichols
 	* improved mysql driver reconnections when in transaction
+	* signal updates
 
 2006.04.05: David Nichols
 	* implemented remove_signal_handler() (experimental)
